--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -17,13 +17,13 @@
     sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 4.75em;
+  font-size: 4.75vw;
   text-align: right;
   color: white;
 }
 
 .intro-text .skills {
-  font-size: 1.75em;
+  font-size: 1.8vw;
   text-align: right;
   color: white;
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -42,6 +42,6 @@
 }
 
 .img-profile {
-  height: 40vh;
+  height: 20vw;
   margin-left: 2.5vh;
 }
