--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -13,8 +13,7 @@
 }
 
 .intro-text .name {
-  font-family: 'Lato', 'Montserrat', 'Helvetica Neue', Helvetica, Arial,
-    sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 4.75vw;
