--- a/src/DataRepo/DataRepo.css
+++ b/src/DataRepo/DataRepo.css
@@ -14,3 +14,12 @@ a {
   color: aliceblue;
   text-decoration-line: none;
 }
+
+.fileRepoGrid {
+  margin-bottom: 5rem;
+}
+
+.buffer-y {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
